[gd_scene load_steps=4 format=3 uid="uid://btsftdsvgd51o"]

[ext_resource type="Script" path="res://Scene/main_menu.gd" id="1_8073r"]
[ext_resource type="Texture2D" uid="uid://c33jsuwm8arar" path="res://Asset/UI/Fantasy_Cat_Landscape.jpeg" id="2_18uve"]
[ext_resource type="AudioStream" uid="uid://dtcpvyam2h0hv" path="res://Asset/Sound/Stream Loops 2024-03-20_02.ogg" id="3_1nuew"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_8073r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_18uve")
expand_mode = 2
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -58.0
offset_right = 98.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play"

[node name="CharacterSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Character Selection"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1nuew")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/CharacterSelect" to="." method="_on_character_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
